	* updated spec file for library version 3.1.0
	* fixed a bug where null values could be inserted into the parse tree
	  causing a core dump (i.e.: "hello"[1] - this is not yet legal, support
	  for this will be implemented in this release, but before this bug fix
	  a core dump would result)
	* implemented string position dereferences with the list dereference 
	  operator "[]"

*** v0.6.2 RELEASE *** 

2006.06.14: David Nichols
	* minor documentation corrections

2006.06.12: David Nichols
	* added -D_RWSTD_MULTI_THREAD to HP-UX compiles with aCC to fix 
	  threading issues with the STL

2006.06.11: David Nichols
	* fixed configure for 64-bit editions of Sybase

2006.06.09: David Nichols
	* fixed += and -= cases when the left-hand-side is NOTHING to take the
	  type of the right-hand-side (i.e. my $str += "hello" will now work as
	  expected (before would prodice $str = 0)
	* implemented trim() function, accepting optional string designating
	  characters to trim from the front and back of the string.  Default 
	  characters to trim are ' ', '\n', '\r', '\t', '\v' (vertical tab, 
	  ASCII 11), and '\0' (null character) - same as PHP's trim() function
	* trim() and chomp() accept references to modify the variable reference
	  in place
	* implemented trim operator
	* implemented scanner support for vertical tab escape '\v'
	* updated documentation for chomp(), added documentation for the new 
	  trim operator and the trim() function
	* added tests for trim and chomp() with variable references to
	  test/test.q

2006.06.08: David Nichols
	* renamed gethostbyname() -> gethostbyname_long() and gethostbyaddr() ->
	  gethostbyaddr_long() and implemented gethostbybname() and 
	  gethostbyaddr() to just return a single string for the first address
	  and the official hostname, respectively
	* added documentation for new gethostby*() functions
	* updated existsFunction() to always return True if the argument is a
	  call reference

2006.06.07: David Nichols