@@ -13072,7 +13072,7 @@ $sock.bind("/tmp/socket");</programlisting>
 	  </row>
 	  <row>
 	    <entry><para><code>User-Agent</code></para></entry>
-	    <entry><para><code>Qore HTTP Client v0.6.2</code></para></entry>
+	    <entry><para><code>Qore HTTP Client v0.7.0</code></para></entry>
 	  </row>
 	  <row>
 	    <entry><para><code>Connection</code></para></entry>
@@ -16074,7 +16074,7 @@ $sock.bind("/tmp/socket");</programlisting>
 	  </row>
 	  <row>
 	    <entry><para><code>User-Agent</code></para></entry>
-	    <entry><para><code>Qore XML-RPC Client v0.6.2</code></para></entry>
+	    <entry><para><code>Qore XML-RPC Client v0.7.0</code></para></entry>
 	  </row>
 	  <row>
 	    <entry><para><code>Connection</code></para></entry>
@@ -16672,7 +16672,7 @@ $sock.bind("/tmp/socket");</programlisting>
 	  </row>
 	  <row>
 	    <entry><para><code>User-Agent</code></para></entry>
-	    <entry><para><code>Qore JSON-RPC Client v0.6.2</code></para></entry>
+	    <entry><para><code>Qore JSON-RPC Client v0.7.0</code></para></entry>
 	  </row>
 	  <row>
 	    <entry><para><code>Connection</code></para></entry>
